fixes +  button not showing in search results cards

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -698,6 +698,9 @@ img {
 }
 .addbuttoncol {
   padding-right: 0px;
+}
+.minus-buttoncol {
+  padding-right: 0px;
   display: none;
 }
 .marker {
